# multi-agent-system

./: .gitignore  CLAUDE.md  CLI_README.md  CRITICAL_FILES.md  FLUENT_OAUTH_README.md  Makefile  README.md  demo_cli_user_experience.sh  demo_oauth_flow.py  demo_oauth_fluent.py  gepa_optimizer.py  gepa_three_gulfs.py  main.py  pyproject.toml  pytest.ini  requirements.txt  settings.local.json  setup.py  test_gepa_enhanced.py  test_oauth_success.py  volatility_analyzer.py  volatility_scenarios.py
.claude/: COMMAND_CHAINING.md
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude/agents/analysis/: README.md
.claude/agents/core/: README.md
.claude/agents/data/: README.md
.claude/agents/hive-mind/: README.md
.claude/agents/sparc/: README.md
.claude/agents/specialized/: README.md
.claude/agents/swarm/: README.md
.claude/agents/testing/: README.md
.claude/agents/trading/: features-extractor.md  health-monitor.md  risk-manager.md  strategy-rsi-ema.md  trader-orchestrator.md
.claude/automation/: README.md
.claude/commands/: analyze-data.md  analyze.md  sdd-workflow.md
.claude/coordination/: README.md
.claude/hooks/: README.md  circuit_breaker.sh  post_data_agent_execution.sh  pre_data_agent_sql.sh
.claude/hooks/logs/: chat.json  post_tool_use.json  pre_tool_use.json  stop.json  sub_agent_stop.json
.claude/workflows/: README.md
agents/architecture/: README.md
agents/development/: README.md
agents/devops/: README.md
agents/documentation/: README.md
agents/github/: README.md
agents/templates/: README.md
artifacts/: winner.json
commands/: README.md
config/: README.md  benchmarks.json  best_strategy.json  canary.json  dex_winner.json  prompts.yaml  risk.json  settings.local.json
config/prompts/: evolution.yaml  gepa_optimized_20250906_101411.yaml  gepa_optimized_20250906_103208.yaml  gepa_optimized_20250906_103444.yaml  gepa_optimized_20250906_105440.yaml  gepa_optimized_20250906_111234.yaml  gepa_optimized_20250906_111440.yaml  gepa_optimized_20250906_111615.yaml  gepa_optimized_20250906_111915.yaml  gepa_optimized_20250906_111931.yaml  gepa_optimized_20250906_112055.yaml  gepa_optimized_20250906_112110.yaml  gepa_optimized_20250906_112224.yaml  gepa_optimized_20250906_112239.yaml  gepa_optimized_20250906_112512.yaml  gepa_optimized_20250906_112533.yaml  gepa_optimized_20250906_112553.yaml  gepa_optimized_20250906_112613.yaml  gepa_optimized_20250906_112634.yaml  market_analysis.yaml  proposer_seed.txt  risk_assessment.yaml  strategy_generation.yaml
db/migrations/: 001_create_recipes.sql
docs/: ARCHITECTURE.md  GEPA_PATTERNS_LEARNED.md
hooks/logs/: post_tool_use.json  pre_tool_use.json
lib/agents/data_agent/: agent.py  claude_oauth.py  cli.py  fluent_oauth.py  oauth_server.py
lib/agents/data_agent/actor/: __init__.py  actor.py  observation.py
lib/agents/data_agent/audit/: __init__.py  merkle_log.py  tracer.py
lib/agents/data_agent/contracts/: request.py  response.py
lib/agents/data_agent/db/: connection.py
lib/agents/data_agent/memory/: __init__.py  recipe_store.py  schema_fingerprint.py
lib/evaluation/: gepa_comprehension_logger.py  gepa_generalization_handler.py  gepa_specification_metric.py
lib/features/: __init__.py  extractor.py
lib/registry/: artifacts.py  datasets.py
lib/research/: backtest_wrapper.py  backtester_vbt.py  strategy_compiler.py  strategy_finder.py  walkforward.py
lib/research/dspy_pipeline/: proposer.py
lib/risk/: __init__.py  manager.py
lib/sim/: execution_model.py  matching_engine.py
lib/storage/: db_manager.py
lib/trading/: indicators.py  portfolio.py
mcp/: README.md  servers.json
memory/: README.md
specs/001-build-an-autonomous/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-an-autonomous/contracts/: README.md  request.json  response.json
tests/: README.md
tests/contract/: test_actor_contracts.py  test_audit_contracts.py  test_memory_contracts.py  test_planner_contracts.py  test_request_schema.py  test_response_schema.py
tests/integration/: test_actor_integration.py  test_dogfood_components.py  test_memory_integration.py  test_orchestrator_integration.py  test_planner_integration.py  test_policy.py  test_recipe_reuse.py  test_self_repair.py  test_sql_analysis.py
tests/unit/: test_db_connection.py  test_planner.py  test_safety.py  test_schema_fingerprinter.py
(+17 files in other folders)
