[project]
name = "gepa-trading-system"
version = "0.1.0"
description = "Multi-agent trading system with GEPA optimization and Three Gulfs Framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GEPA Trading Team"},
]

dependencies = [
    "dspy>=3.0.3",
    "pandas>=2.2.0",
    "numpy==1.23.5",  # Pinned for VectorBT compatibility
    "numba==0.56.4",  # Pinned for VectorBT compatibility
    "vectorbtpro>=2025.7.27",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.5.0",
    "psycopg[binary]>=3.1.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "anthropic>=0.8.0",
    "jsonschema>=4.20.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.7.0",
    "ipython>=8.0.0",
]

research = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
]

[project.scripts]
gepa = "main:main"
optimize = "gepa_optimizer:main"
analyze = "volatility_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --cov=lib --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://jmanhype:${FURY_TOKEN}@pypi.fury.io/vectorbt/simple/"]

[tool.uv.pip]
system = false